# KimuraPlayer

./: .gitignore  CMakeLists.txt  KimuraPlayer.sln  README.md
AbcToKimura/: AbcToKimura.cpp  AbcToKimura.vcxproj  AbcToKimura.vcxproj.filters  CMakeLists.txt  build.bat  build.sh
KimuraConverter/: CMakeLists.txt  KimuraConverter.cpp  KimuraConverter.h  KimuraConverter.vcxproj  KimuraConverter.vcxproj.filters  build.bat  build.sh
KimuraConverter/Threadpool/: Threadpool.cpp  Threadpool.h
Player/: CMakeLists.txt  Player.vcxproj  Player.vcxproj.filters  build.bat  build.sh
TestPlayer/: CMakeLists.txt  TestPlayer.cpp  TestPlayer.vcxproj  TestPlayer.vcxproj.filters  build.bat  build.sh
